--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header><h1>Todo List of Aref Keyhani</h1></header>
 
     <form>
-      <input type="text" class="todo-input" />
+      <input type="text" class="todo-input" placeholder="Enter What To-do" />
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
