--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
+      <div class="div-select">
+        <select name="todos" id="" class="filter-todo">
+          <option value="all">All</option>
+          <option value="completed">Done</option>
+          <option value="uncompleted">Not done yet</option>
+        </select>
+      </div>
     </form>
 
     <div class="todo-container">
